# Shadowcat

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: CLAUDE.md
.claude/agents/: shadowcat-code-reviewer-opus.md  shadowcat-code-reviewer.md  shadowcat-coder-opus.md  shadowcat-coder.md  shadowcat-spec-reviewer-opus.md  shadowcat-spec-reviewer.md
.claude/hooks/: README.md  codebase-skill-reminder.py  test-codebase-skill-reminder.sh
.claude/skills/shadowcat-codebase-actors-tokens/: SKILL.md
.claude/skills/shadowcat-codebase-assets/: SKILL.md
.claude/skills/shadowcat-codebase-client-shell/: SKILL.md
.claude/skills/shadowcat-codebase-core/: SKILL.md
.claude/skills/shadowcat-codebase-documents-permissions/: SKILL.md
.claude/skills/shadowcat-codebase-realtime-sync/: SKILL.md
.claude/skills/shadowcat-codebase-scene-rendering/: SKILL.md
.github/workflows/: ci.yml
.superpowers/sdd/: task-5-report.md
assets/: icon.icns
docs/: PLAN.md  POST_WORK_FINDINGS.md  TODO.md
docs/design/: ARCHITECTURE.md  M2-data-foundation.md
docs/superpowers/plans/: 2026-06-17-m1-project-infrastructure.md  2026-06-17-m2-data-foundation.md  2026-06-18-capability-permissions-phase1.md  2026-06-18-close-pre-m7-todos.md  2026-06-18-m3-auth-server-skeleton.md  2026-06-18-m4-websocket-event-bus.md  2026-06-18-m5-document-crud-permissions.md  2026-06-18-m6a-client-core.md  2026-06-18-m6b-modules-capabilities.md  2026-06-18-m6c-1-search.md  2026-06-18-m6c-2-live-search.md  2026-06-19-m7a-server-surface.md  2026-06-19-m7b-1-contract-server-mirror.md  2026-06-19-m7b-2-client-registry.md  2026-06-19-m7b-3-surface-adapter.md  2026-06-19-m7c-1-client-spa.md  2026-06-19-m7c-2-server-embed.md  2026-06-19-m7d-1-theming.md  2026-06-19-m7d-2-i18n.md  2026-06-19-m7d-3-session-restore.md  2026-06-19-m8a-server-scene-foundation.md  2026-06-21-m8b-1-assets-server.md  2026-06-21-m8b-2-asset-panel.md  2026-06-21-m8c-1-render-foundation.md  2026-06-22-m8c-2-render-api-vision-spike.md  2026-06-22-m9b-vision.md  (+24 more)
packaging/linux/: shadowcat.desktop
packaging/macos/: Info.plist
scripts/: package.sh
src/server/: Cargo.toml  build.rs
src/server/migrations/: 0001_init.sql  0002_auth.sql  0003_fts.sql  0004_user_ui_state.sql  0005_scene_entities.sql  0006_assets.sql  0007_explored_fog.sql
src/server/src/: config.rs  db.rs  health.rs  lib.rs  main.rs
src/server/src/auth/: mod.rs  password.rs  role.rs  session.rs  setup.rs
src/server/src/data/: asset.rs  command.rs  document.rs  membership.rs  migrate.rs  mod.rs  permission.rs  repository.rs  search.rs  sqlite.rs  validation.rs
src/server/src/http/: assets.rs  embed.rs  error.rs  middleware.rs  mod.rs  routes.rs
src/server/src/scene/: explored.rs  lighting.rs  mod.rs  move_exec.rs  move_stream.rs  movement.rs  pathfinding.rs  vision.rs
src/server/src/ws/: conn.rs  mod.rs  protocol.rs  room.rs  time.rs
src/server/static/: auth.js  index.html  login.html  setup.html  styles.css
src/server/tests/: assets.rs  scene_derived.rs  scene_hydration.rs  ws_convergence.rs  ws_live_search.rs
src/server/tests/common/: mod.rs
src/types/: index.ts  package.json
(+313 files in other folders)
