[package]
name = "shadowcat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
ts-rs = "12"
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
