[package]
name = "shadowcat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
ts-rs = "12"
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
argon2 = { version = "0.5", features = ["std"] }
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
axum-test = "17"
