[package]
name = "shadowcat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "12", features = ["uuid-impl"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
argon2 = { version = "0.5", features = ["std"] }
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
dashmap = "6"
hecs = "0.11"
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rust-embed = "8"
mime_guess = "2"
tower-sessions = { version = "0.15", default-features = false, features = ["axum-core", "signed"] }
base64 = "0.22"
subtle = "2"

# Embeds the application icon into the Windows executable (see build.rs); a
# no-op on other targets, so it never affects the Linux/macOS binaries.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"
axum-test = "17"
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "multipart"] }
futures-util = "0.3"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "net", "time"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
